tool/src/cpp/snapshots/diplomat_tool__cpp__tests__cross_module_struct_fields@Bar.hpp.snap
---
source: tool/src/cpp/mod.rs
expression: out_texts.get(out).unwrap()
---
#ifndef Bar_HPP
#define Bar_HPP
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include <algorithm>
#include <memory>
#include <variant>
#include <optional>
#include "diplomat_runtime.hpp"

#include "Bar.h"

struct Foo;

struct Bar {
 public:
  Foo* y;
};


#endif

