tool/src/cpp/snapshots/diplomat_tool__cpp__tests__cross_module_struct_fields@Foo.hpp.snap
---
source: tool/src/cpp/mod.rs
expression: out_texts.get(out).unwrap()
---
#ifndef Foo_HPP
#define Foo_HPP
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include <algorithm>
#include <memory>
#include <variant>
#include <optional>
#include "diplomat_runtime.hpp"

#include "Foo.h"

#include "Bar.hpp"

struct Foo {
 public:
  Bar x;
};


#endif

